# orchestrator

./: .gitignore  check_lora_modules.py  nohup.out  requirements.txt
conductor/: .gitignore  README.md  delete_pycache.py  hydra_utils.py  launch_vllm_only.sh  llm_clients.py  push_eval_to_wandb.py  remove_comments.py  requirements.txt  train.py
conductor/accelerate_configs/: deepspeed_zero3_cpu_offloading.yaml  deepspeed_zero3_cpu_offloading_optim.yaml
conductor/cfgs/: train.yaml
conductor/custom_data/: countdown_data.py  dataset.py  dataset_utils.py  recursion_formats.py  recursion_utils.py  routing_question_formats.py
conductor/deprecated/: run_tasks.py  (+12 more)
conductor_ood_eval/: README.md  extra_requirements.txt  main.py  query_oai_responses.py  requirements.txt  serve_deepseek.sh  test_api.py  test_bedrock.py
davids/: __init__.py  davids_orchestrate.py
orchestrator/: README.md  hydra_utils.py  pyproject.toml  requirements.txt  setup.py  train.py
orchestrator/accelerate_configs/: deepspeed_zero1.yaml  deepspeed_zero3_cpu_offloading.yaml  fsdp.yaml  fsdp_qlora.yaml
orchestrator/cfgs/: train.yaml
orchestrator/cfgs/data_cfg/: bigcodebench.yaml
orchestrator/cfgs/model_cfg/: base.yaml  base_qlora.yaml
orchestrator/cfgs/run_cfg/: default.yaml
orchestrator/cfgs/trainer_cfg/: base.yaml  grpo.yaml  ppo.yaml
orchestrator/data_utils/: bigcodebench_dataset.py  few_shot_examples.py  orchestrator_dataset.py
orchestrator/scripts/: launch.sh
orchestrator/trainers/: __init__.py  orchestrator_engine.py
orchestrator/utils/: bigcodebench_eval.py  model_utils.py
(+197 files in other folders)
