[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestrator"
version = "0.1.0"
description = "Orchestrator training package"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["orchestrator", "orchestrator.data_utils", "orchestrator.trainers", "orchestrator.utils"]

[tool.setuptools.package-dir]
orchestrator = "."
"orchestrator.data_utils" = "data_utils"
"orchestrator.trainers" = "trainers"
"orchestrator.utils" = "utils"
